--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="row">
           <div class="col-xs-12">
             <div class="text-center">
-              <h1 class="page-heading">Caro & Ben's Wedding<br /><strong class="rotate">for life, for love, with you, save the date</strong></h1>
+              <h1 class="page-heading">Caro et Ben's Wedding<br /><strong class="rotate">for life, for love, with you, save the date</strong></h1>
               <h2 class="sub-heading">29 Mai 2016</h2>
             </div>
             <div class="text-center"><a class="a btn-cta btn btn-primary btn-lg" format="ics" href="assets/caro-ben-wedding-event.ics">Add to calendar <i class="fa fa-calendar"></i></a><a class="a btn-cta btn btn-default btn-lg m-l-2" href="https://www.leetchi.com/c/caro-ben-wedding" target="_blank"><i class="fa fa-gift"></i> Wedding list</a></div>
