--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="row">
           <div class="col-xs-12">
             <div class="text-center">
-              <h1 class="page-heading">Caro et Ben's Wedding<br /><strong class="rotate">for life, for love, with you, save the date</strong></h1>
+              <h1 class="page-heading">Caro & Ben's Wedding<br /><strong class="rotate">for life, for love, with you, save the date</strong></h1>
               <h2 class="sub-heading">29 Mai 2016</h2>
             </div>
             <div class="text-center"><a class="a btn-cta btn btn-primary btn-lg" format="ics" href="assets/caro-ben-wedding-event.ics">Add to calendar <i class="fa fa-calendar"></i></a><a class="a btn-cta btn btn-default btn-lg m-l-2" href="https://www.leetchi.com/c/caro-ben-wedding" target="_blank"><i class="fa fa-gift"></i> Wedding list</a></div>
@@ -146,7 +146,10 @@
                   <div class="timeline-label">
                     <h3>The Townhall<br/><span>La Mairie</span></h3>
                     <img alt="Mairie" class="img img-responsive img-rounded full-width" src="/assets/images/mairie.jpg" /><br />
-                    <p>Place de la République,<br/>92300 Levallois-Perret<small><a href="https://www.google.fr/maps/place/Mairie/@48.8932739,2.2881923,17z/data=!4m2!3m1!1s0x0:0x62d7437fdc0cfb83" target="_blank">see it on Google Maps <i class="fa fa-external-link"></i></a></small></p>
+                    <p>
+                      Place de la République,<br/>92300 Levallois-Perret<small>
+                      <a href="https://www.google.fr/maps/place/Mairie/@48.8932739,2.2881923,17z/data=!4m2!3m1!1s0x0:0x62d7437fdc0cfb83" target="_blank">see it on Google Maps <i class="fa fa-external-link"></i></a></small>
+                    </p>
                   </div>
                 </div>
                 <div class="well wow fadeInLeft" data-wow-offset="200">
@@ -154,7 +157,9 @@
                   <div class="timeline-label">
                     <h2>The Synagogue<br/>Notre Dâme de Nazaret</h2>
                     <img alt="Syna" class="img img-responsive img-rounded full-width" src="/assets/images/syna.jpg" /><br />
-                    <p>15 Rue Notre Dame de Nazareth,<br/>75003 Paris<small><a href="https://www.google.fr/maps/place/Synagogue+de+Nazareth/@48.8676443,2.3637825,17z/data=!4m2!3m1!1s0x0:0xcf5b31db62486821" target="_blank">see it on Google Maps <i class="fa fa-external-link"></i></a></small></p>
+                    <p>15 Rue Notre Dame de Nazareth,<br/>75003 Paris
+                      <small><a href="https://www.google.fr/maps/place/Synagogue+de+Nazareth/@48.8676443,2.3637825,17z/data=!4m2!3m1!1s0x0:0xcf5b31db62486821" target="_blank">see it on Google Maps <i class="fa fa-external-link"></i></a></small>
+                    </p>
                   </div>
                 </div>
                 <div class="well wow fadeInRight" data-wow-offset="200">
@@ -162,7 +167,9 @@
                   <div class="timeline-label">
                     <h2>The Reception<br/>Salon Pyramides, L'Opale</h2>
                     <img alt="Pyramides" class="img img-responsive img-rounded full-width" src="/assets/images/pyramides.jpg" /><br />
-                    <p>16 Avenue de Saint-Germain,<br/>78560 Le Port-Marly<small><a href="https://www.google.fr/maps/place/Les+Pyramides/@48.8880569,2.105897,15z/data=!4m2!3m1!1s0x0:0xe2f6d81162a19cd9?sa=X&amp;ved=0ahUKEwiD9pHPvrnLAhWLWxQKHcuUBmgQ_BIIezAN" target="_blank">see it on Google Maps <i class="fa fa-external-link"></i></a></small></p>
+                    <p>16 Avenue de Saint-Germain,<br/>78560 Le Port-Marly
+                      <small><a href="https://www.google.fr/maps/place/Les+Pyramides/@48.8880569,2.105897,15z/data=!4m2!3m1!1s0x0:0xe2f6d81162a19cd9?sa=X&amp;ved=0ahUKEwiD9pHPvrnLAhWLWxQKHcuUBmgQ_BIIezAN" target="_blank">see it on Google Maps <i class="fa fa-external-link"></i></a></small>
+                    </p>
                   </div>
                 </div>
               </div>
@@ -186,7 +193,9 @@
                       <div class="timeline-label">
                         <h2>The Townhall<br/><span>La Mairie</span></h2>
                         <img alt="Mairie" class="img img-responsive img-rounded full-width" src="assets/images/mairie.jpg" /><br />
-                        <p>Place de la République,<br/>92300 Levallois-Perret<small><a href="https://www.google.fr/maps/place/Mairie/@48.8932739,2.2881923,17z/data=!4m2!3m1!1s0x0:0x62d7437fdc0cfb83" target="_blank">see it on Google Maps <i class="fa fa-external-link"></i></a></small></p>
+                        <p>Place de la République,<br/>92300 Levallois-Perret
+                          <small><a href="https://www.google.fr/maps/place/Mairie/@48.8932739,2.2881923,17z/data=!4m2!3m1!1s0x0:0x62d7437fdc0cfb83" target="_blank">see it on Google Maps <i class="fa fa-external-link"></i></a></small>
+                        </p>
                       </div>
                     </div>
                   </article>
@@ -208,7 +217,9 @@
                       <div class="timeline-label">
                         <h2>The Reception<br/>Salon Pyramides, L'Opale</h2>
                         <img alt="Pyramides" class="img img-responsive img-rounded full-width" src="assets/images/pyramides.jpg" /><br />
-                        <p>16 Avenue de Saint-Germain,<br/>78560 Le Port-Marly<small><a href="https://www.google.fr/maps/place/Les+Pyramides/@48.8880569,2.105897,15z/data=!4m2!3m1!1s0x0:0xe2f6d81162a19cd9?sa=X&amp;ved=0ahUKEwiD9pHPvrnLAhWLWxQKHcuUBmgQ_BIIezAN" target="_blank">see it on Google Maps <i class="fa fa-external-link"></i></a></small></p>
+                        <p>16 Avenue de Saint-Germain,<br/>78560 Le Port-Marly
+                          <small><a href="https://www.google.fr/maps/place/Les+Pyramides/@48.8880569,2.105897,15z/data=!4m2!3m1!1s0x0:0xe2f6d81162a19cd9?sa=X&amp;ved=0ahUKEwiD9pHPvrnLAhWLWxQKHcuUBmgQ_BIIezAN" target="_blank">see it on Google Maps <i class="fa fa-external-link"></i></a></small>
+                        </p>
                       </div>
                     </div>
                   </article>
