--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
                     <h3>The Townhall<br/><span>La Mairie</span></h3>
                     <img alt="Mairie" class="img img-responsive img-rounded full-width" src="/assets/images/mairie.jpg" /><br />
                     <p>
-                      Place de la République,<br/>92300 Levallois-Perret<small>
-                      <a href="https://www.google.fr/maps/place/Mairie/@48.8932739,2.2881923,17z/data=!4m2!3m1!1s0x0:0x62d7437fdc0cfb83" target="_blank">see it on Google Maps <i class="fa fa-external-link"></i></a></small>
+                      Place de la République,<br/>92300 Levallois-Perret
+                      <br/><small><a href="https://www.google.fr/maps/place/Mairie/@48.8932739,2.2881923,17z/data=!4m2!3m1!1s0x0:0x62d7437fdc0cfb83" target="_blank">see it on Google Maps <i class="fa fa-external-link"></i></a></small>
                     </p>
                   </div>
                 </div>
@@ -158,7 +158,7 @@
                     <h2>The Synagogue<br/>Notre Dâme de Nazaret</h2>
                     <img alt="Syna" class="img img-responsive img-rounded full-width" src="/assets/images/syna.jpg" /><br />
                     <p>15 Rue Notre Dame de Nazareth,<br/>75003 Paris
-                      <small><a href="https://www.google.fr/maps/place/Synagogue+de+Nazareth/@48.8676443,2.3637825,17z/data=!4m2!3m1!1s0x0:0xcf5b31db62486821" target="_blank">see it on Google Maps <i class="fa fa-external-link"></i></a></small>
+                      <br/><small><a href="https://www.google.fr/maps/place/Synagogue+de+Nazareth/@48.8676443,2.3637825,17z/data=!4m2!3m1!1s0x0:0xcf5b31db62486821" target="_blank">see it on Google Maps <i class="fa fa-external-link"></i></a></small>
                     </p>
                   </div>
                 </div>
@@ -168,7 +168,7 @@
                     <h2>The Reception<br/>Salon Pyramides, L'Opale</h2>
                     <img alt="Pyramides" class="img img-responsive img-rounded full-width" src="/assets/images/pyramides.jpg" /><br />
                     <p>16 Avenue de Saint-Germain,<br/>78560 Le Port-Marly
-                      <small><a href="https://www.google.fr/maps/place/Les+Pyramides/@48.8880569,2.105897,15z/data=!4m2!3m1!1s0x0:0xe2f6d81162a19cd9?sa=X&amp;ved=0ahUKEwiD9pHPvrnLAhWLWxQKHcuUBmgQ_BIIezAN" target="_blank">see it on Google Maps <i class="fa fa-external-link"></i></a></small>
+                      <br/><small><a href="https://www.google.fr/maps/place/Les+Pyramides/@48.8880569,2.105897,15z/data=!4m2!3m1!1s0x0:0xe2f6d81162a19cd9?sa=X&amp;ved=0ahUKEwiD9pHPvrnLAhWLWxQKHcuUBmgQ_BIIezAN" target="_blank">see it on Google Maps <i class="fa fa-external-link"></i></a></small>
                     </p>
                   </div>
                 </div>
@@ -194,7 +194,7 @@
                         <h2>The Townhall<br/><span>La Mairie</span></h2>
                         <img alt="Mairie" class="img img-responsive img-rounded full-width" src="assets/images/mairie.jpg" /><br />
                         <p>Place de la République,<br/>92300 Levallois-Perret
-                          <small><a href="https://www.google.fr/maps/place/Mairie/@48.8932739,2.2881923,17z/data=!4m2!3m1!1s0x0:0x62d7437fdc0cfb83" target="_blank">see it on Google Maps <i class="fa fa-external-link"></i></a></small>
+                          <br/><small><a href="https://www.google.fr/maps/place/Mairie/@48.8932739,2.2881923,17z/data=!4m2!3m1!1s0x0:0x62d7437fdc0cfb83" target="_blank">see it on Google Maps <i class="fa fa-external-link"></i></a></small>
                         </p>
                       </div>
                     </div>
@@ -206,7 +206,8 @@
                       <div class="timeline-label">
                         <h2>The Synagogue<br/>Notre Dâme de Nazaret</h2>
                         <img alt="Syna" class="img img-responsive img-rounded full-width" src="assets/images/syna.jpg" /><br />
-                        <p>15 Rue Notre Dame de Nazareth,<br/>75003 Paris<small><a href="https://www.google.fr/maps/place/Synagogue+de+Nazareth/@48.8676443,2.3637825,17z/data=!4m2!3m1!1s0x0:0xcf5b31db62486821" target="_blank">see it on Google Maps <i class="fa fa-external-link"></i></a></small></p>
+                        <p>15 Rue Notre Dame de Nazareth,<br/>75003 Paris
+                          <br/><small><a href="https://www.google.fr/maps/place/Synagogue+de+Nazareth/@48.8676443,2.3637825,17z/data=!4m2!3m1!1s0x0:0xcf5b31db62486821" target="_blank">see it on Google Maps <i class="fa fa-external-link"></i></a></small></p>
                       </div>
                     </div>
                   </article>
@@ -218,7 +219,7 @@
                         <h2>The Reception<br/>Salon Pyramides, L'Opale</h2>
                         <img alt="Pyramides" class="img img-responsive img-rounded full-width" src="assets/images/pyramides.jpg" /><br />
                         <p>16 Avenue de Saint-Germain,<br/>78560 Le Port-Marly
-                          <small><a href="https://www.google.fr/maps/place/Les+Pyramides/@48.8880569,2.105897,15z/data=!4m2!3m1!1s0x0:0xe2f6d81162a19cd9?sa=X&amp;ved=0ahUKEwiD9pHPvrnLAhWLWxQKHcuUBmgQ_BIIezAN" target="_blank">see it on Google Maps <i class="fa fa-external-link"></i></a></small>
+                          <br/><small><a href="https://www.google.fr/maps/place/Les+Pyramides/@48.8880569,2.105897,15z/data=!4m2!3m1!1s0x0:0xe2f6d81162a19cd9?sa=X&amp;ved=0ahUKEwiD9pHPvrnLAhWLWxQKHcuUBmgQ_BIIezAN" target="_blank">see it on Google Maps <i class="fa fa-external-link"></i></a></small>
                         </p>
                       </div>
                     </div>
