Improve css and add favicon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Caro & Ben's Wedding</title>
-    <link rel="stylesheet" type="text/css" href="assets/stylesheets/theme.css">
   </head>
   <body>
     <header>
@@ -145,7 +144,7 @@
                   <h2>May 26th 2016<br/>11:00 am</h2>
                   <div class="timeline-label">
                     <h3>The Townhall<br/><span>La Mairie</span></h3>
-                    <img alt="Mairie" class="img img-responsive img-rounded full-width" src="/assets/images/mairie.jpg" /><br />
+                    <img alt="Mairie" class="img img-responsive img-rounded full-width" src="assets/images/mairie.jpg" /><br />
                     <p>
                       Place de la République,<br/>92300 Levallois-Perret
                       <br/><small><a href="https://www.google.fr/maps/place/Mairie/@48.8932739,2.2881923,17z/data=!4m2!3m1!1s0x0:0x62d7437fdc0cfb83" target="_blank">see it on Google Maps <i class="fa fa-external-link"></i></a></small>
@@ -156,7 +155,7 @@
                   <h2>May 29th 2016<br/>12:00 pm</h2>
                   <div class="timeline-label">
                     <h2>The Synagogue<br/>Notre Dâme de Nazaret</h2>
-                    <img alt="Syna" class="img img-responsive img-rounded full-width" src="/assets/images/syna.jpg" /><br />
+                    <img alt="Syna" class="img img-responsive img-rounded full-width" src="assets/images/syna.jpg" /><br />
                     <p>15 Rue Notre Dame de Nazareth,<br/>75003 Paris
                       <br/><small><a href="https://www.google.fr/maps/place/Synagogue+de+Nazareth/@48.8676443,2.3637825,17z/data=!4m2!3m1!1s0x0:0xcf5b31db62486821" target="_blank">see it on Google Maps <i class="fa fa-external-link"></i></a></small>
                     </p>
@@ -166,7 +165,7 @@
                   <h2>May 29th 2016<br/>19:00 pm</h2>
                   <div class="timeline-label">
                     <h2>The Reception<br/>Salon Pyramides, L'Opale</h2>
-                    <img alt="Pyramides" class="img img-responsive img-rounded full-width" src="/assets/images/pyramides.jpg" /><br />
+                    <img alt="Pyramides" class="img img-responsive img-rounded full-width" src="assets/images/pyramides.jpg" /><br />
                     <p>16 Avenue de Saint-Germain,<br/>78560 Le Port-Marly
                       <br/><small><a href="https://www.google.fr/maps/place/Les+Pyramides/@48.8880569,2.105897,15z/data=!4m2!3m1!1s0x0:0xe2f6d81162a19cd9?sa=X&amp;ved=0ahUKEwiD9pHPvrnLAhWLWxQKHcuUBmgQ_BIIezAN" target="_blank">see it on Google Maps <i class="fa fa-external-link"></i></a></small>
                     </p>
@@ -267,16 +266,19 @@
         </div>
       </div>
     </footer>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script type="text/javascript" src="assets/javascripts/jquery_ujs.js" ></script>
-    <script type="text/javascript" src="assets/javascripts/bootstrap.js" ></script>
-    <script type="text/javascript" src="assets/javascripts/wow.js" ></script>
-    <script type="text/javascript" src="assets/javascripts/rotate.js" ></script>
-    <script type="text/javascript" src="assets/javascripts/countdown.js" ></script>
-    <script type="text/javascript" src="assets/javascripts/theme.js" ></script>
   </body>
 </html>
 
 <link href="http://fonts.googleapis.com/css?family=Lato:100,300,400,700" rel="stylesheet" type="text/css" />
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+<link rel="stylesheet" type="text/css" href="assets/stylesheets/styles.css">
+<link rel="stylesheet" type="text/css" href="assets/stylesheets/theme.css">
+<script async type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
+<script async type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<script type="text/javascript" src="assets/javascripts/jquery_ujs.js" ></script>
+<script type="text/javascript" src="assets/javascripts/wow.js" ></script>
+<script type="text/javascript" src="assets/javascripts/rotate.js" ></script>
+<script type="text/javascript" src="assets/javascripts/countdown.js" ></script>
+<script type="text/javascript" src="assets/javascripts/theme.js" ></script>
