--- a/index.html
+++ b/index.html
@@ -34,31 +34,6 @@
         </div>
       </div>
     </section>
-    <section class="first-container wow fadeInLeft" data-wow-offset="200">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-6 hidden-xs"><div class="left-iphone"></div></div>
-          <div class="col-xs-12 col-sm-6">
-            <div class="row">
-              <div class="hidden-xs col-sm-1 right-content text-right">
-                <h1 class="lead"><i class="fa fa-quote-left"></i></h1>
-              </div>
-              <div class="col-xs-12 col-sm-10 right-content text-center">
-                <h1 class="lead">I can't wait to see you all at our wedding!</h1>
-              </div>
-              <div class="hidden-xs col-sm-1 right-content">
-                <h1 class="lead"><i class="fa fa-quote-right"></i></h1>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-xs-12 text-center-xs m-b-3">
-                <h3 class="muted">Caroline</h3>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
     <section class="second-container">
       <div class="container">
         <div class="row">
@@ -91,7 +66,32 @@
         </div>
       </div>
     </section>
-    <section class="third-container wow fadeInRight">
+    <section class="first-container">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-sm-offset-7 col-sm-5 wow fadeInLeft" data-wow-offset="200">
+            <div class="row">
+              <div class="hidden-xs col-sm-1 text-right">
+                <h1 class="lead"><i class="fa fa-quote-left"></i></h1>
+              </div>
+              <div class="col-xs-12 col-sm-10 text-center">
+                <h1 class="lead">We can't wait to see you all at our wedding!</h1>
+              </div>
+              <div class="hidden-xs col-sm-1">
+                <h1 class="lead"><i class="fa fa-quote-right"></i></h1>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-xs-12 text-right m-b-3">
+                <h3 class="muted">Caroline & Benjamin</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="hidden third-container wow fadeInRight">
       <div class="container">
         <div class="row">
           <div class="col-xs-12 col-sm-6">
@@ -116,23 +116,7 @@
         </div>
       </div>
     </section>
-    <section class="middle-activate hidden">
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-12 col-sm-8 col-sm-offset-1 text-center-xs">
-            <h1 class="lead"><strong>Fullstack </strong>is an easy way to create your projects.</h1>
-          </div>
-          <div class="col-xs-12 col-sm-2 text-center-xs wow fadeInLeft"><a class="btn btn-primary btn-lg" href="#">Purchase now <i class="fa fa-arrow-right"></i></a></div>
-        </div>
-      </div>
-    </section>
-    <section class="bar-container">
-      <div class="container">
-        <div class="text-center">
-          <p>We are so happy to celebrate our wedding with you <i class="fa fa-heart"></i> Caroline &amp; Benjamin</p>
-        </div>
-      </div>
-    </section>
+
     <section class="team-container visible-xs">
       <div class="container">
         <div class="row">
