--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
     <section class="first-container">
       <div class="container">
         <div class="row">
-          <div class="col-xs-12 col-sm-offset-7 col-sm-5 wow fadeInLeft" data-wow-offset="200">
+          <div class="col-sm-6 col-md-7">&nbsp;</div>
+          <div class="col-xs-12 col-sm-6 col-md-5 wow fadeInLeft" data-wow-offset="200">
             <div class="row">
               <div class="hidden-xs col-sm-1 text-right">
                 <h1 class="lead"><i class="fa fa-quote-left"></i></h1>
