--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <header>
       <nav class="navbar navbar-default navbar-static-top navbar-transparent" role="navigation">
         <div class="container">
-          <div class="navbar-header"><button class="navbar-toggle" data-target=".navbar-collapse" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button><a class="navbar-brand" href="/hero"><span>C&nbsp;</span><i class="fa fa-heart-o"></i> B</a></div>
+          <div class="navbar-header">
+            <a class="navbar-brand" href="/hero"><span>C&nbsp;</span><i class="fa fa-heart-o"></i> B</a>
+          </div>
         </div>
       </nav>
     </header>
